# DemoCrawlProducts

./: README.md  app.py  data_brick_viglacera.json  data_viglacera.json  explore_web.ipynb  pyproject.toml  requirements.txt  scrapers.py
