[project]
name = "interncrawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "streamlit>=1.52.1",
    "webdriver-manager>=4.0.2",
]
